--- a/example/index.pug
+++ b/example/index.pug
@@ -9,6 +9,6 @@ html(lang= 'en')
     meta(name= 'description', content= description)
     
   body      
-    #root.container
+    #example1.container
     
     script(src= '/index.js')
