--- a/example/index.pug
+++ b/example/index.pug
@@ -9,6 +9,8 @@ html(lang= 'en')
     meta(name= 'description', content= description)
     
   body      
-    #example1.container
+    .container
+      #example1
+      #example2
     
     script(src= '/index.js')
