--- a/example/index.pug
+++ b/example/index.pug
@@ -10,7 +10,16 @@ html(lang= 'en')
     
   body      
     .container
-      #example1
-      #example2
+      .row
+        h1 @danielnarey/componentize 
+        p Demoing a few simple examples of componentized apps
+        hr
+      .row
+        .col-sm
+          #example1
+        .col-sm
+          #example2
+        .col-sm
+          #example3
     
     script(src= '/index.js')
