--- a/example/index.pug
+++ b/example/index.pug
@@ -10,16 +10,17 @@ html(lang= 'en')
     
   body      
     .container
-      .row
+      header
         h1 @danielnarey/componentize 
-        p Demoing a few simple examples of componentized apps
+        strong Demoing a few simple examples of componentized apps
         hr
-      .row
+      main.row
         .col-sm
           #example1
         .col-sm
           #example2
         .col-sm
           #example3
+      footer
     
     script(src= '/index.js')
