--- a/example/index.pug
+++ b/example/index.pug
@@ -10,10 +10,9 @@ html(lang= 'en')
     
   body      
     .container
-      header
+      header(style="height:8rem;")
         h1 @danielnarey/componentize 
-        strong Demoing a few simple examples of componentized apps
-        hr
+        h3 Demoing a few simple examples of componentized apps
       main.row
         .col-sm
           #example1
