--- a/example/index.pug
+++ b/example/index.pug
@@ -10,9 +10,9 @@ html(lang= 'en')
     
   body      
     .container
-      header(style="height:8rem;")
-        h1 @danielnarey/componentize 
-        h3 Demoing a few simple examples of componentized apps
+      header(style="height:10rem;")
+        h1= title 
+        h4= description
       main.row
         .col-sm
           #example1
